/cp 2014-06-04  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/43453
	* typeck.c (cp_build_modify_expr): Handle array of characters
	initialized by a string literal.
	* decl.c (check_initializer): Handle parenthesized string literal
	as initializer.
	* typeck2.c (store_init_value): Remove redundant check.

/testsuite
2014-06-04  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/43453
	* g++.dg/init/pr43453.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@211248 138bc75d-0d04-0410-961f-82ee72b054a4